--- a/src/event_form/steps/event-form-step3.html
+++ b/src/event_form/steps/event-form-step3.html
@@ -8,21 +8,38 @@
       <span ng-show="eventFormData.isPlace" translate-once="eventForm.step3.title_place"></span>
     </h2>
 
+    <select ng-change="changeCountrySelection()"
+      ng-options="option.label for option in availableCountries track by option.code"
+      ng-model="selectedCountry"
+      class="form-control">
+    </select>
+
     <div class="row">
       <div class="col-xs-12">
-        <label for="gemeente-autocomplete"
-               id="gemeente-label"
-               translate-once="eventForm.step3.choose_city"
-               ng-hide="selectedCity"></label>
-        <div id="gemeente-kiezer" ng-hide="selectedCity">
+        <span ng-show="selectedCountry.code==='BE'">
+          <label for="gemeente-autocomplete"
+                 id="gemeente-label"
+                 ng-hide="selectedCity">
+                 <span translate-once="eventForm.step3.choose_city"></span> 
+                 <span translate-once="eventForm.step3.choose_city_helper" class="text-muted"></span>
+         </label>
+       </span>
+       <span ng-show="selectedCountry.code==='NL'">
+         <label for="gemeente-autocomplete"
+                id="gemeente-label"
+                ng-hide="selectedCity">
+                <span translate-once="eventForm.step3.choose_residence"></span>
+                <span translate-once="eventForm.step3.choose_residence_helper" class="text-muted"></span>
+        </label>
+        </span>
+        <div id="gemeente-kiezer" ng-hide="selectedCity" ng-show="selectedCountry=='nl'">
           <span style="position: relative; display: inline-block; direction: ltr;" class="twitter-typeahead">
             <input type="text"
                    id="gemeente-autocomplete"
                    class="form-control uib-typeahead"
-                   translate-once-placeholder="eventForm.step3.placeholder_city"
                    ng-model="cityAutocompleteTextField"
                    udb-auto-scroll
-                   uib-typeahead="city as city.zip + ' ' + city.name for city in cities | filter:filterCities($viewValue) | orderBy:orderByLevenshteinDistance($viewValue)"
+                   uib-typeahead="city as city.label for city in cities | filter:filterCities($viewValue) | orderBy:orderByLevenshteinDistance($viewValue)"
                    typeahead-on-select="selectCity($item, $label)"
                    typeahead-min-length="2"
                    typeahead-template-url="templates/city-suggestion.html"
@@ -41,8 +58,7 @@
              translate-once="eventForm.step3.change"
              ng-click="changeCitySelection()"></a>
         </div>
-      </div>
-    </div>
+
 
     <div id="waar-evenement" class="clearfix" ng-show="eventFormData.isEvent && selectedCity">
       <div class="row">
