--- a/src/management/organizers/organizer-detail.html
+++ b/src/management/organizers/organizer-detail.html
@@ -10,18 +10,33 @@
       <span ng-if="odc.isManageState()">
         <button class="list-group-item"
                 type="button"
-                ui-sref="management.organizers.edit({id: odc.organizer.id})"><i class="fa fa-pencil" aria-hidden="true"></i> Bewerken</button>
+                ui-sref="management.organizers.edit({id: odc.organizer.id})">
+          <i class="fa fa-pencil" aria-hidden="true"></i>
+          <span translate-once="organizer.manage.edit"></span>
+        </button>
         <button class="list-group-item"
-                ng-click="odc.deleteOrganization()"><i class="fa fa-trash" aria-hidden="true"></i> Verwijderen</button>
+                ng-click="odc.deleteOrganization()">
+          <i class="fa fa-trash" aria-hidden="true"></i>
+          <span translate-once="organizer.manage.delete"></span>
+        </button>
         <button class="list-group-item"
-                ui-sref="management.organizers.search({id: odc.organizer.id})"><i class="fa fa-arrow-left" aria-hidden="true"></i> Terug naar overzicht</button>
+                ui-sref="management.organizers.search({id: odc.organizer.id})">
+          <i class="fa fa-arrow-left" aria-hidden="true"></i>
+          <span translate-once="organizer.manage.overview"></span>
+        </button>
       </span>
       <span ng-if="!odc.isManageState()">
         <button class="list-group-item"
                 type="button"
-                ui-sref="split.organizer.edit({id: odc.organizer.id})"><i class="fa fa-pencil" aria-hidden="true"></i> Bewerken</button>
+                ui-sref="split.organizer.edit({id: odc.organizer.id})">
+          <i class="fa fa-pencil" aria-hidden="true"></i>
+          <span translate-once="organizer.manage.edit"></span>
+        </button>
         <button class="list-group-item"
-                ui-sref="split.footer.dashboard"><i class="fa fa-arrow-left" aria-hidden="true"></i> Terug naar dashboard</button>
+                ui-sref="split.footer.dashboard">
+          <i class="fa fa-arrow-left" aria-hidden="true"></i>
+          <span translate-once="organizer.manage.dashboard"></span>
+        </button>
       </span>
     </div>
   </div>
