--- a/src/event_form/steps/event-form-step4.html
+++ b/src/event_form/steps/event-form-step4.html
@@ -2,8 +2,16 @@
 
   <a name="titel"></a>
   <section id="titel" ng-show="eventFormData.showStep4">
-
-    <h2 class="title-border"><span class="number">4</span> <span translate-once="eventForm.step4.basic_data"></span></h2>
+    <div class="step-title">
+      <div class="row">
+        <div class="col-xs-12">
+          <h2>
+            <span class="number">4</span>
+            <span translate-once="eventForm.step4.basic_data"></span>
+          </h2>
+        </div>
+      </div>
+    </div>
 
     <div class="row">
       <div class="col-md-8 col-lg-7">
