--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -2,11 +2,18 @@
   <a name="extra"></a>
   <section id="extra" ng-show="eventFormData.showStep5">
 
-    <h2 class="title-border">
-      <span class="number">5</span>
-      <span ng-show="eventFormData.isEvent" translate-once="eventForm.step5.expose_event"></span>
-      <span ng-show="eventFormData.isPlace" translate-once="eventForm.step5.expose_place"></span>
-    </h2>
+    <div class="step-title">
+      <div class="row">
+        <div class="col-xs-12">
+          <h2>
+            <span class="number">5</span>
+            <span ng-show="eventFormData.isEvent" translate-once="eventForm.step5.expose_event"></span>
+            <span ng-show="eventFormData.isPlace" translate-once="eventForm.step5.expose_place"></span>
+          </h2>
+          </h2>
+        </div>
+      </div>
+    </div>
 
     <div class="row">
       <div class="col-sm-7">
