III-2711 feature toggle for ‘mijn organisaties’

--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -66,7 +66,7 @@
         </div>
       </div>
 
-      <div ng-show="dash.pagedItemViewerOrganizers.events.length">
+      <div ng-show="dash.pagedItemViewerOrganizers.events.length && dash.enableMyOrganizers">
 
         <div class="clearfix">
           <p class="invoer-title"><span class="block-header" translate-once="dashboard.my_organizers"></span>
