--- a/src/event_form/steps/event-form-step3.html
+++ b/src/event_form/steps/event-form-step3.html
@@ -13,7 +13,7 @@
         </div>
         <div class="col-xs-4">
           <select ng-change="changeCountrySelection()"
-            ng-options="option.label for option in availableCountries track by option.code"
+            ng-options="option.code | translate for option in availableCountries track by option.code"
             ng-model="selectedCountry"
             class="form-control">
           </select>
