III-2742 fallback for only one available country

--- a/src/event_form/steps/event-form-step3.html
+++ b/src/event_form/steps/event-form-step3.html
@@ -15,7 +15,8 @@
           <select ng-change="changeCountrySelection()"
             ng-options="option.code | translate for option in availableCountries track by option.code"
             ng-model="selectedCountry"
-            class="form-control">
+            class="form-control"
+            ng-show="availableCountries.length > 1">
           </select>
         </div>
       </div>
