--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -71,7 +71,7 @@
         <div class="clearfix">
           <p class="invoer-title"><span class="block-header" translate-once="dashboard.my_organizers"></span>
             <span class="pull-right" ng-if="dash.toggleAddOffer">
-              <a class="btn btn-primary" ng-click="dash.openCreateOrganizerModal()"><i class="fa fa-plus-circle"></i> <span translate-once="dashboard.add_organizer"></span></a>
+              <a class="btn btn-primary" href="organizer"><i class="fa fa-plus-circle"></i> <span translate-once="dashboard.add_organizer"></span></a>
             </span>
           </p>
         </div>
