--- a/src/organizers/organizer-form.html
+++ b/src/organizers/organizer-form.html
@@ -26,7 +26,7 @@
                            name="website"
                            class="form-control"
                            ng-model-options="{ debounce: 300 }"
-                           ng-model="ofc.organizer.url"
+                           ng-model="ofc.organizer.website"
                            ng-change="ofc.validateWebsite()"
                            aria-describedby="organizer-website-status"
                            autocomplete="off"
