III-2759 fix organizer search in management state

--- a/src/management/organizers/search/organization-search.html
+++ b/src/management/organizers/search/organization-search.html
@@ -9,7 +9,7 @@
         <i ng-show="$ctrl.loading" class="fa fa-circle-o-notch fa-spin"></i>
     </div>
     <div class="col-md-5 text-right">
-        <a class="btn btn-primary" ui-sref="management.organizers.search.create">
+        <a class="btn btn-primary" ui-sref="split.organizer">
             <i class="fa fa-plus-circle"></i> Organisatie toevoegen
         </a>
     </div>
