--- a/src/search/ui/search.html
+++ b/src/search/ui/search.html
@@ -69,7 +69,7 @@
                         <i class="fa fa-tag"></i> Labelen
                     </button>
                     <button class="btn btn-default rv-action" ng-click="exportEvents()">
-                        <i class="fa fa-cloud-download"></i> Exporteren
+                        <i class="fa fa-cloud-download"></i> Activiteiten exporteren
                     </button>
                     <a href="#" class="alert-link rv-action" ng-click="resultViewer.deselectAll()">Deselecteren</a>
                 </div>
