--- a/src/organizers/organizer-form.html
+++ b/src/organizers/organizer-form.html
@@ -7,6 +7,9 @@
     <form name="ofc.organizerForm" class="organizer-edit-form">
         <div class="row">
             <div class="col-sm-12 col-md-8">
+                <div class="alert alert-warning" ng-show="ofc.showLanguageWarning">
+                    <p translate-once="eventForm.langWarning" translate-values="{ language: '{{ofc.language}}' }"></p>
+                </div>
                 <p class="alert alert-danger" ng-show="ofc.hasErrors">
                     <span ng-show="ofc.organizersWebsiteFound">Deze URL is al in gebruik door een andere organisatie.<br /></span>
                     <span ng-show="ofc.websiteError">Er ging iets mis met het controleren van de website.<br /></span>
