--- a/src/organizers/detail/organizer-detail.html
+++ b/src/organizers/detail/organizer-detail.html
@@ -13,6 +13,12 @@
         <i class="fa fa-pencil" aria-hidden="true"></i>
         <span translate-once="organizer.manage.edit"></span>
       </button>
+      <button class="list-group-item"
+              type="button"
+              ui-sref="split.organizerTranslate({id: odc.organizer.id})">
+        <i class="fa fa-globe" aria-hidden="true"></i>
+        <span translate-once="organizer.manage.translate"></span>
+      </button>
       <span ng-if="odc.isManageState()">
         <button class="list-group-item"
                 ng-click="odc.deleteOrganization()">
