--- a/src/offer_translate/ui/offer-translate.html
+++ b/src/offer_translate/ui/offer-translate.html
@@ -14,7 +14,7 @@
       <div class="col-sm-6">
         <div class="offer-translate-chooser">
           <label class="form-text">
-             <button ng-click="openEditPage()" class="btn-link btn-sm">
+             <button ng-click="openEditPage(offerType)" class="btn-link btn-sm">
                <span translate-once="translate.original"></span> ({{mainLanguage}}) <span translate-once="translate.edit"></span>
              </button>
           </label>
@@ -40,7 +40,7 @@
   <offer-translate-tariffs offer="cachedOffer" active-languages="activeLanguages"></offer-translate-tariffs>
 
   <!-- Address -->
-  <offer-translate-address offer="cachedOffer" active-languages="activeLanguages" ng-if="isPlace"></offer-translate-address>
+  <offer-translate-address offer="cachedOffer" active-languages="activeLanguages" ng-if="isPlace || isOrganizer"></offer-translate-address>
 
   <button class="btn btn-success" ng-click="goToDashboard()" translate-once="translate.ready"></button>
 
