III-2842 only load cultuurkuur plugin when enabled

--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -65,7 +65,11 @@
                 <td><span class="row-label">Toegang</span></td>
                 <td>
                   <p ng-bind="::translateAudience(event.audience.audienceType)"></p>
-                  <udb-event-cultuurkuur-component event="event" permission="::permissions.editing" ></udb-event-cultuurkuur-component>
+                  <udb-event-cultuurkuur-component
+                          ng-if="::cultuurkuurEnabled"
+                          event="event"
+                          permission="::permissions.editing" >
+                  </udb-event-cultuurkuur-component>
                 </td>
               </tr>
               <tr>
