--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -251,7 +251,7 @@
               <div class="row extra-tickets-periode"
                    ng-show="hasBookingInfo()">
                   <div class="extra-task">
-                      <udb-reservation-period></udb-reservation-period>
+                      <udb-reservation-period on-booking-period-saved="saveBookingInfo()"></udb-reservation-period>
                   </div>
               </div>
 
