--- a/src/organizers/organizer-form.html
+++ b/src/organizers/organizer-form.html
@@ -10,8 +10,9 @@
                 <p class="alert alert-danger" ng-show="ofc.hasErrors">
                     <span ng-show="ofc.organizersWebsiteFound">Deze URL is al in gebruik door een andere organisatie.<br /></span>
                     <span ng-show="ofc.websiteError">Er ging iets mis met het controleren van de website.<br /></span>
-                    <span ng-show="ofc.organizerEditForm.website.$error.required || ofc.urlError">Gelieve een website in te vullen.<br /></span>
-                    <span ng-show="ofc.organizerEditForm.name.$error.required">Gelieve een naam in te vullen.<br /></span>
+                    <span ng-show="ofc.organizerForm.website.$error.required || ofc.urlError">Gelieve een website in te vullen.<br /></span>
+                    <span ng-show="ofc.organizerForm.name.$error.required">Gelieve een naam in te vullen.<br /></span>
+                    <span ng-show="ofc.organizerForm.name.$error.maxlength">De naam van de organisatie kan maar 250 karakters bevatten.<br /></span>
                     <span ng-show="ofc.addressError">Gelieve een geldig adres in te vullen.<br /></span>
                     <span ng-show="ofc.contactError">Gelieve alle contactinfo correct in te vullen.<br /></span>
                     <span ng-show="ofc.saveError">Er ging iets mis tijdens het opslaan.<br /></span>
@@ -45,6 +46,7 @@
                            class="form-control"
                            ng-model="ofc.organizer.name"
                            ng-change="ofc.validateName()"
+                           ng-maxlength="250"
                            required>
                     <p class="help-block">De officiële publieke naam van de organisatie.</p>
                 </div>
