--- a/src/place-detail/ui/place-detail.html
+++ b/src/place-detail/ui/place-detail.html
@@ -99,7 +99,7 @@
             <tr>
               <td><span class="row-label" translate-once="preview.age_label"></span></td>
               <td>
-                <span ng-if="::place.typicalAgeRange">{{::place.typicalAgeRange}}</span>
+                <span ng-if="::place.typicalAgeRange">{{ageRange}}</span>
                 <span ng-if="::(!place.typicalAgeRange)" translate-once="preview.all_ages"></span>
               </td>
             </tr>
