--- a/src/search/ui/event.directive.html
+++ b/src/search/ui/event.directive.html
@@ -48,7 +48,12 @@
       </div>
       <div class="udb-email">
         <span class="fa fa-user"></span>&nbsp;
-        <span ng-bind="event.creator"></span>
+        <span ng-if="::!eventCtrl.isGodUser">
+          <span ng-bind="event.creator"></span>
+        </span>
+        <span ng-if="::eventCtrl.isGodUser">
+          <a href="{{ eventCtrl.uitId + event.creator }}"><span ng-bind="event.creator"></span></a>
+        </span>
       </div>
       <div class="udb-organizer-name">
         <span class="fa fa-building-o"></span>&nbsp;
