III-2953 - adapted fr translations for translate section

--- a/src/offer_translate/ui/offer-translate.html
+++ b/src/offer_translate/ui/offer-translate.html
@@ -15,7 +15,7 @@
         <div class="offer-translate-chooser">
           <label class="form-text">
              <button ng-click="openEditPage()" class="btn-link btn-sm">
-               <span translate-once="translate.original"></span> ({{mainLanguage}}) <span translate-once="translate.edit"></span>
+               <span translate-once="translate.edit"></span> <span translate-once="translate.original"></span> ({{mainLanguage}})
              </button>
           </label>
           <span ng-repeat="language in languages">
