III-2962 - add visual example for the different report types, load settings for template from appConfig

--- a/src/export/event-export-modal.html
+++ b/src/export/event-export-modal.html
@@ -75,6 +75,9 @@
               </label>
             </div>
           </div>
+          <div class="col-sm-4">
+            <img ng-src="{{exporter.templateUrl}}{{exporter.selectedTemplate.img}}" alt="{{exporter.selectedTemplate.label}}" ng-show="exporter.selectedTemplate" class="img-responsive img-thumbnail center-block export-template"/>
+          </div>
         </div>
       </div>
 
