--- a/src/export/event-export-modal.html
+++ b/src/export/event-export-modal.html
@@ -61,7 +61,7 @@
               <img ng-src="{{exporter.exportLogoUrl}}{{exporter.selectedBrand.logo}}" alt="{{exporter.selectedBrand.name}}" ng-show="exporter.selectedBrand" class="img-responsive img-thumbnail center-block export-logo"/>
             </div>
           </div>
-          <p class="alert alert-danger" role="alert" ng-show="exporter.hasErrors && customizeForm.eventExportBrand.$error.required">Gelieve een sjabloon te selecteren. Dit is een noodzakelijk veld.</p>
+          <p class="alert alert-danger" role="alert" ng-show="exporter.hasErrors && customizeForm.eventExportBrand.$error.required">Gelieve een logo te selecteren. Dit is een noodzakelijk veld.</p>
         </div>
 
       <div class="form-group">
