--- a/src/event_form/steps/event-form-step3.html
+++ b/src/event_form/steps/event-form-step3.html
@@ -72,23 +72,31 @@
       <div class="row">
         <div class="col-xs-12">
           <label id="locatie-label" ng-show="!selectedLocation">
-            <span translate-once="eventForm.step3.choose_location"></span> <i class="fa fa-circle-o-notch fa-spin" ng-show="loadingPlaces"></i>
+            <span translate-once="eventForm.step3.choose_location"></span>
           </label>
           <div id="locatie-kiezer" ng-hide="selectedLocation || loadingPlaces">
             <span style="position: relative; display: block; direction: ltr;" class="twitter-typeahead">
-              <input type="text" ng-change="locationSearched()"
+              <input type="text"
                      translate-once-placeholder="eventForm.step3.placeholder_location"
                      class="form-control typeahead"
-                     ng-model="locationAutocompleteTextField"
-                     uib-typeahead="location.id as location.name for location in filteredLocations = (locationsForCity | filter:filterCityLocations($viewValue)) | orderBy:orderCityLocations($viewValue) | limitTo:50"
+                     ng-model="asyncSelected"
+                     uib-typeahead="location.id as location.name for location in filteredLocations = (getPlaces($viewValue)) | limitTo:50"
                      typeahead-on-select="selectLocation($item, $model, $label)"
                      typeahead-min-length="3"
+                     typeahead-wait-ms="500"
+                     typeahead-loading="loadingLocations"
                      typeahead-template-url="templates/place-suggestion.html"
                      typeahead-popup-template-url="templates/place-suggestion-popup.html"
-                     focus-if="!loadingPlaces"
                      udb-auto-scroll/>
+              <div ng-show="loadingLocations" class="dropdown-menu-no-results">
+                <div class="panel panel-default text-center">
+                  <div class="panel-body">
+                      <i class="fa fa-circle-o-notch fa-spin"></i>
+                  </div>
+                </div>
+              </div>
               <div class="plaats-adres-resultaat dropdown-menu-no-results"
-                   ng-show="(!cityHasLocations() || filteredLocations.length === 0) && locationsSearched">
+                   ng-show="!cityHasLocations() && locationsSearched && !loadingLocations">
                 <div class="panel panel-default text-center">
                   <div class="panel-body">
                     <p translate-once="eventForm.step3.location_not_found"></p>
