III-2978 - show info alert when user selects 'BOOKABLE_EVENT'

--- a/src/event_form/steps/event-form-step3.html
+++ b/src/event_form/steps/event-form-step3.html
@@ -24,6 +24,13 @@
 
     <div class="row">
       <div class="col-xs-12">
+        <!-- show info alert when event is a BOOKABLE_EVENT -->
+        <div class="alert alert-info" ng-show="selectedCountry.code === 'BOOKABLE_EVENT'">
+          <span>
+              Evenementen waarvan de locatie in overleg wordt bepaald, worden niet gepubliceerd op UiTinVlaanderen of andere publiekskanalen.
+              Je evenement verschijnt wel op cultuurkuur.be
+          </span>
+        </div>
         <span ng-show="selectedCountry.code==='BE'">
           <label for="gemeente-autocomplete"
                  id="gemeente-label"
