III-2978 - added translatable label for BOOKABLE_EVENT next-button

--- a/src/event_form/steps/event-form-step3.html
+++ b/src/event_form/steps/event-form-step3.html
@@ -29,7 +29,7 @@
           <div class="alert alert-info">
             <span translate-once="eventForm.step3.bookable_event_info_alert"></span>
           </div>
-          <button type="button" class="btn btn-primary" ng-click="">Ga verder</button>
+          <button type="button" class="btn btn-primary" ng-click="" translate-once="eventForm.step3.bookable_event_next_button">Ga verder</button>
         </div>
         <span ng-show="selectedCountry.code==='BE'">
           <label for="gemeente-autocomplete"
