--- a/src/event_form/steps/event-form-step3.html
+++ b/src/event_form/steps/event-form-step3.html
@@ -29,7 +29,7 @@
           <div class="alert alert-info">
             <span translate-once="eventForm.step3.bookable_event_info_alert"></span>
           </div>
-          <button type="button" class="btn btn-primary" ng-click="" translate-once="eventForm.step3.bookable_event_next_button">Ga verder</button>
+          <button type="button" class="btn btn-primary" ng-click="" translate-once="eventForm.step3.bookable_event_next_button"></button>
         </div>
         <span ng-show="selectedCountry.code==='BE'">
           <label for="gemeente-autocomplete"
@@ -47,7 +47,7 @@
                 <span translate-once="eventForm.step3.choose_residence_helper" class="text-muted"></span>
         </label>
         </span>
-        <div id="gemeente-kiezer" ng-hide="selectedCity" ng-show="selectedCountry=='nl'">
+        <div id="gemeente-kiezer" ng-hide="selectedCity || selectedCountry.code === 'BOOKABLE_EVENT'">
           <span style="position: relative; display: inline-block; direction: ltr;" class="twitter-typeahead">
             <input type="text"
                    id="gemeente-autocomplete"
