--- a/src/event_form/steps/event-form-step3.html
+++ b/src/event_form/steps/event-form-step3.html
@@ -26,14 +26,19 @@
       <div class="col-xs-12">
         <!-- show info alert when event is a BOOKABLE_EVENT -->
         <div ng-show="isBookableEvent">
-          <div class="alert alert-info">
-            <span translate-once="eventForm.step3.bookable_event_info_alert"></span>
+          <div ng-hide="eventFormData.showStep4">
+            <div class="alert alert-info">
+              <span translate-once="eventForm.step3.bookable_event_info_alert"></span>
+            </div>
+            <button type="button" 
+                    class="btn btn-primary" 
+                    ng-click="selectLocation(bookableEventLocationId)" 
+                    translate-once="eventForm.step3.bookable_event_next_button">
+            </button>
           </div>
-          <button type="button" 
-                  class="btn btn-primary" 
-                  ng-click="selectLocation(bookableEventLocationId)" 
-                  translate-once="eventForm.step3.bookable_event_next_button">
-          </button>
+          <div ng-show="eventFormData.showStep4">
+            <span class="btn-chosen">De locatie wordt bepaald in overleg met de school.</span>
+          </div>
         </div>
         <span ng-show="selectedCountry.code==='BE'">
           <label for="gemeente-autocomplete"
