III-2978 - add translatable label for bookable event step3 success message

--- a/src/event_form/steps/event-form-step3.html
+++ b/src/event_form/steps/event-form-step3.html
@@ -37,7 +37,7 @@
             </button>
           </div>
           <div ng-show="eventFormData.showStep4">
-            <span class="btn-chosen">De locatie wordt bepaald in overleg met de school.</span>
+            <span class="btn-chosen" translate-once="eventForm.step3.bookable_event_success_message"></span>
           </div>
         </div>
         <span ng-show="selectedCountry.code==='BE'">
