--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -174,6 +174,13 @@
                 <span class="author" ng-if="eventAction.author" ng-bind="::eventAction.author"></span>
                 <br ng-if="::eventAction.author"/>
                 <span class="description" ng-bind="::eventAction.description"></span>
+                <div ng-if="::eventAction.api">
+                  API: <span class="api" ng-bind="::eventAction.api"></span>
+                </div>
+                <div ng-if="::eventAction.apiKey">
+                  API key: <span class="api" ng-bind="::eventAction.apiKey"></span>
+                  <span ng-if="::eventAction.consumerName">(<span class="consumerName" ng-bind="::eventAction.consumerName"></span>)</span>
+                </div>
               </dd>
             </dl>
           </div>
